Mon Apr 11 09:38:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Valuetype/ValueBase.h:
          Doxygen improvement

Sun Apr 10 11:10:07 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_traits.cpp:

          Added include of ace/Log_Msg.h. Thanks to Steve Huston
 	  <shuston@riverace.com> and Mark Wilson <mwil at lle dot
 	  rochester dot edu> for reporting that this include is needed for
 	  Solaris.

Sun Apr 10 02:26:36 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/fe/fe_global.cpp:

	  Removed export macros from forward declarations.  They aren't
	  necessary, and cause the forthcoming g++ 4.0 to issue an error
	  when enabling visibility attribute support.

Sat Apr  9 21:19:51 2005  Phil Mesnier  <mesnier_p@ociweb.com>

        * examples/ior_corbaloc/run_test.pl:
        * tao/CORBALOC_Parser.cpp:
        * tao/CORBANAME_Parser.cpp:

          Fixed support for default object key when using either corbaloc:
          or corbaname: urls. Added a case to the ior_corbaloc example
          to cover the case of defaulted RIR corbanames.

Sat Apr  9 10:07:02 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tests/Bug_1535_Regression/bug_1535_regression.cpp
	  (test_create_object_before_POA_reactivation):
	* tests/DynAny_Test/test_dynunion.cpp (run_test):

	  Fixed typo.

Sat Apr  9 00:23:50 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/Allocator.h (~TAO_Allocator):

	  Added virtual destructor.  Fixes "contains virtual functions but
	  non-virtual destructor" g++ 4.0 (CVS snapshot) warning.

	* tao/TypeCodeFactory/Factory_Map.h (factory_map):
	* tao/TypeCodeFactory/TypeCodeFactory_Adapter_Impl.cpp
	  (extract_typecode):

	  Moved TypeCode factory function map to extract_typecode()
	  method.  Addresses unused variable warnings exhibited by a G++
	  4.0 CVS snapshot.

	* tao/Valuetype/ValueFactory_Map.cpp (rebind, unbind):

	  Initialize variables.  Addresses "variables may be used